fix: body overflow

--- a/lavelo/src/main-component/App/App.css
+++ b/lavelo/src/main-component/App/App.css
@@ -7,6 +7,7 @@ h1,h2,h3{
 }
 body{
   font-family: 'Muli', sans-serif;
+  overflow-x: hidden;
 }
 ul{
   list-style: none;
